--- a/index.ipynb
+++ b/index.ipynb
@@ -42,19 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sqlalchemy\n",
     "from sqlalchemy import create_engine\n",
     "from sqlalchemy.orm import Session, sessionmaker\n",
     "\n",
-    "engine = None\n",
-    "Session = None\n",
-    "session = None"
+    "engine = create_engine(\"sqlite:///Northwind_small.sqlite\", echo=True)\n",
+    "Session = sessionmaker(bind=engine)\n",
+    "session = Session()"
    ]
   },
   {
@@ -74,17 +72,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-17 08:37:29,344 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2019-02-17 08:37:29,345 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-02-17 08:37:29,348 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2019-02-17 08:37:29,349 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-02-17 08:37:29,354 INFO sqlalchemy.engine.base.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
+      "2019-02-17 08:37:29,355 INFO sqlalchemy.engine.base.Engine ()\n",
+      "['Category', 'Customer', 'CustomerCustomerDemo', 'CustomerDemographic', 'Employee', 'EmployeeTerritory', 'Order', 'OrderDetail', 'Product', 'Region', 'Shipper', 'Supplier', 'Territory']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
+    "from sqlalchemy import inspect\n",
     "\n",
-    "inspector = None\n",
+    "#Create inspector\n",
+    "inspector = inspect(engine)\n",
     "\n",
-    "print(None)"
+    "# Get names of tables in database\n",
+    "print(inspector.get_table_names())\n"
    ]
   },
   {
@@ -100,20 +113,28 @@
     "Write your answer below this line:\n",
     "________________________________________________________________________________________________________________________________\n",
     "\n",
-    "\n",
+    "the table names are actually singular (e.g. Employee) where the documentation is plural (e.g. Employees)\n",
     "\n",
     "Let's inspect the column names on one of the tables as well. In the cell below, call the appropriate method to get all column names for the `'Employee'` table. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-17 08:40:09,398 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"Employee\")\n",
+      "2019-02-17 08:40:09,402 INFO sqlalchemy.engine.base.Engine ()\n",
+      "[{'name': 'Id', 'type': INTEGER(), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 1}, {'name': 'LastName', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'FirstName', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'Title', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'TitleOfCourtesy', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'BirthDate', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'HireDate', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'Address', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'City', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'Region', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'PostalCode', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'Country', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'HomePhone', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'Extension', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'Photo', 'type': BLOB(), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'Notes', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'ReportsTo', 'type': INTEGER(), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}, {'name': 'PhotoPath', 'type': VARCHAR(length=8000), 'nullable': True, 'default': None, 'autoincrement': 'auto', 'primary_key': 0}]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(None)"
+    "print(inspector.get_columns('Employee'))"
    ]
   },
   {
@@ -127,22 +148,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table Name: Employee\n",
+      "\n",
+      "Name: Id \t Type: INTEGER\n",
+      "Name: LastName \t Type: VARCHAR(8000)\n",
+      "Name: FirstName \t Type: VARCHAR(8000)\n",
+      "Name: Title \t Type: VARCHAR(8000)\n",
+      "Name: TitleOfCourtesy \t Type: VARCHAR(8000)\n",
+      "Name: BirthDate \t Type: VARCHAR(8000)\n",
+      "Name: HireDate \t Type: VARCHAR(8000)\n",
+      "Name: Address \t Type: VARCHAR(8000)\n",
+      "Name: City \t Type: VARCHAR(8000)\n",
+      "Name: Region \t Type: VARCHAR(8000)\n",
+      "Name: PostalCode \t Type: VARCHAR(8000)\n",
+      "Name: Country \t Type: VARCHAR(8000)\n",
+      "Name: HomePhone \t Type: VARCHAR(8000)\n",
+      "Name: Extension \t Type: VARCHAR(8000)\n",
+      "Name: Photo \t Type: BLOB\n",
+      "Name: Notes \t Type: VARCHAR(8000)\n",
+      "Name: ReportsTo \t Type: INTEGER\n",
+      "Name: PhotoPath \t Type: VARCHAR(8000)\n"
+     ]
+    }
+   ],
    "source": [
     "def get_columns_info(col_name):\n",
-    "    cols_list = None\n",
+    "    cols_list = inspector.get_columns(col_name)\n",
     "    \n",
-    "    print(\"Table Name: {}\".format(None))\n",
+    "    print(\"Table Name: {}\".format(col_name))\n",
     "    print(\"\")\n",
     "    \n",
-    "    for None in None:\n",
-    "        print(\"Name: {} \\t Type: {}\".format(None, None))\n",
+    "    for col in cols_list:\n",
+    "        print(\"Name: {} \\t Type: {}\".format(col['name'],col['type']))\n",
     "\n",
-    "get_columns_info('Employee')"
+    "get_columns_info('Employee')\n"
    ]
   },
   {
@@ -502,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
