--- a/index.ipynb
+++ b/index.ipynb
@@ -236,16 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-17 08:46:57,836 INFO sqlalchemy.engine.base.Engine SELECT * FROM Customer LIMIT 5\n",
+      "2019-02-17 08:46:57,837 INFO sqlalchemy.engine.base.Engine ()\n",
+      "[('ALFKI', 'Alfreds Futterkiste', 'Maria Anders', 'Sales Representative', 'Obere Str. 57', 'Berlin', 'Western Europe', '12209', 'Germany', '030-0074321', '030-0076545'), ('ANATR', 'Ana Trujillo Emparedados y helados', 'Ana Trujillo', 'Owner', 'Avda. de la Constitución 2222', 'México D.F.', 'Central America', '05021', 'Mexico', '(5) 555-4729', '(5) 555-3745'), ('ANTON', 'Antonio Moreno Taquería', 'Antonio Moreno', 'Owner', 'Mataderos  2312', 'México D.F.', 'Central America', '05023', 'Mexico', '(5) 555-3932', None), ('AROUT', 'Around the Horn', 'Thomas Hardy', 'Sales Representative', '120 Hanover Sq.', 'London', 'British Isles', 'WA1 1DP', 'UK', '(171) 555-7788', '(171) 555-6750'), ('BERGS', 'Berglunds snabbköp', 'Christina Berglund', 'Order Administrator', 'Berguvsvägen  8', 'Luleå', 'Northern Europe', 'S-958 22', 'Sweden', '0921-12 34 65', '0921-12 34 67')]\n"
+     ]
+    }
+   ],
    "source": [
-    "con = None\n",
-    "rs = None\n",
+    "con = engine.connect()\n",
+    "rs = con.execute(\"SELECT * FROM Customer LIMIT 5\")\n",
     "\n",
-    "print(None)"
+    "print(rs.fetchall())"
    ]
   },
   {
@@ -275,16 +283,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-17 08:48:17,037 INFO sqlalchemy.engine.base.Engine SELECT firstname, lastname, title FROM Employee\n",
+      "2019-02-17 08:48:17,039 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "      <td>Sales Representative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Andrew</td>\n",
+       "      <td>Fuller</td>\n",
+       "      <td>Vice President, Sales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Janet</td>\n",
+       "      <td>Leverling</td>\n",
+       "      <td>Sales Representative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Margaret</td>\n",
+       "      <td>Peacock</td>\n",
+       "      <td>Sales Representative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Steven</td>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>Sales Manager</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0          1                      2\n",
+       "0     Nancy    Davolio   Sales Representative\n",
+       "1    Andrew     Fuller  Vice President, Sales\n",
+       "2     Janet  Leverling   Sales Representative\n",
+       "3  Margaret    Peacock   Sales Representative\n",
+       "4    Steven   Buchanan          Sales Manager"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import pandas as pd\n",
     "\n",
-    "\n",
-    "rs = None\n",
-    "df = None\n",
+    "rs = con.execute(\"SELECT firstname, lastname, title FROM Employee\")\n",
+    "df = pd.DataFrame(rs.fetchall())\n",
     "df.head()"
    ]
   },
@@ -310,13 +399,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-17 08:50:56,977 INFO sqlalchemy.engine.base.Engine SELECT * FROM [Order] WHERE customerid IS 'VINET'\n",
+      "2019-02-17 08:50:56,978 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>EmployeeId</th>\n",
+       "      <th>OrderDate</th>\n",
+       "      <th>RequiredDate</th>\n",
+       "      <th>ShippedDate</th>\n",
+       "      <th>ShipVia</th>\n",
+       "      <th>Freight</th>\n",
+       "      <th>ShipName</th>\n",
+       "      <th>ShipAddress</th>\n",
+       "      <th>ShipCity</th>\n",
+       "      <th>ShipRegion</th>\n",
+       "      <th>ShipPostalCode</th>\n",
+       "      <th>ShipCountry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10248</td>\n",
+       "      <td>VINET</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2012-07-04</td>\n",
+       "      <td>2012-08-01</td>\n",
+       "      <td>2012-07-16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32.38</td>\n",
+       "      <td>Vins et alcools Chevalier</td>\n",
+       "      <td>59 rue de l'Abbaye</td>\n",
+       "      <td>Reims</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>51100</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10274</td>\n",
+       "      <td>VINET</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2012-08-06</td>\n",
+       "      <td>2012-09-03</td>\n",
+       "      <td>2012-08-16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.01</td>\n",
+       "      <td>Vins et alcools Chevalier</td>\n",
+       "      <td>59 rue de l'Abbaye</td>\n",
+       "      <td>Reims</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>51100</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10295</td>\n",
+       "      <td>VINET</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2012-09-02</td>\n",
+       "      <td>2012-09-30</td>\n",
+       "      <td>2012-09-10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>Vins et alcools Chevalier</td>\n",
+       "      <td>59 rue de l'Abbaye</td>\n",
+       "      <td>Reims</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>51100</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10737</td>\n",
+       "      <td>VINET</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-11-11</td>\n",
+       "      <td>2013-12-09</td>\n",
+       "      <td>2013-11-18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.79</td>\n",
+       "      <td>Vins et alcools Chevalier</td>\n",
+       "      <td>59 rue de l'Abbaye</td>\n",
+       "      <td>Reims</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>51100</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10739</td>\n",
+       "      <td>VINET</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2013-11-12</td>\n",
+       "      <td>2013-12-10</td>\n",
+       "      <td>2013-11-17</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11.08</td>\n",
+       "      <td>Vins et alcools Chevalier</td>\n",
+       "      <td>59 rue de l'Abbaye</td>\n",
+       "      <td>Reims</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>51100</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Id CustomerId  EmployeeId   OrderDate RequiredDate ShippedDate  ShipVia  \\\n",
+       "0  10248      VINET           5  2012-07-04   2012-08-01  2012-07-16        3   \n",
+       "1  10274      VINET           6  2012-08-06   2012-09-03  2012-08-16        1   \n",
+       "2  10295      VINET           2  2012-09-02   2012-09-30  2012-09-10        2   \n",
+       "3  10737      VINET           2  2013-11-11   2013-12-09  2013-11-18        2   \n",
+       "4  10739      VINET           3  2013-11-12   2013-12-10  2013-11-17        3   \n",
+       "\n",
+       "   Freight                   ShipName         ShipAddress ShipCity  \\\n",
+       "0    32.38  Vins et alcools Chevalier  59 rue de l'Abbaye    Reims   \n",
+       "1     6.01  Vins et alcools Chevalier  59 rue de l'Abbaye    Reims   \n",
+       "2     1.15  Vins et alcools Chevalier  59 rue de l'Abbaye    Reims   \n",
+       "3     7.79  Vins et alcools Chevalier  59 rue de l'Abbaye    Reims   \n",
+       "4    11.08  Vins et alcools Chevalier  59 rue de l'Abbaye    Reims   \n",
+       "\n",
+       "       ShipRegion ShipPostalCode ShipCountry  \n",
+       "0  Western Europe          51100      France  \n",
+       "1  Western Europe          51100      France  \n",
+       "2  Western Europe          51100      France  \n",
+       "3  Western Europe          51100      France  \n",
+       "4  Western Europe          51100      France  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = None\n",
+    "df = pd.read_sql_query(\"SELECT * FROM [Order] WHERE customerid IS 'VINET'\", engine)\n",
     "df.head()"
    ]
   },
@@ -340,14 +590,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-17 08:55:29,195 INFO sqlalchemy.engine.base.Engine SELECT o.ID, c.CompanyName, Count(*) num_orders FROM [Order]o INNER JOIN Customer c on o.CustomerID = c.ID GROUP BY c.CompanyName ORDER BY num_orders DESC\n",
+      "2019-02-17 08:55:29,196 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>CompanyName</th>\n",
+       "      <th>num_orders</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11064</td>\n",
+       "      <td>Save-a-lot Markets</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11072</td>\n",
+       "      <td>Ernst Handel</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11021</td>\n",
+       "      <td>QUICK-Stop</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11050</td>\n",
+       "      <td>Folk och fä HB</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11063</td>\n",
+       "      <td>Hungry Owl All-Night Grocers</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Id                   CompanyName  num_orders\n",
+       "0  11064            Save-a-lot Markets          31\n",
+       "1  11072                  Ernst Handel          30\n",
+       "2  11021                    QUICK-Stop          28\n",
+       "3  11050                Folk och fä HB          19\n",
+       "4  11063  Hungry Owl All-Night Grocers          19"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = None\n",
-    "df.head()"
+    "df = pd.read_sql_query(\"\"\"SELECT o.ID, c.CompanyName, Count(*) num_orders FROM [Order]\\\n",
+    "o INNER JOIN Customer c on o.CustomerID = c.ID GROUP BY c.CompanyName ORDER BY num_orders DESC\"\"\", engine)\n",
+    "df.head()\n"
    ]
   },
   {
@@ -381,8 +713,8 @@
    },
    "outputs": [],
    "source": [
-    "q = None\n",
-    "\n",
+    "q =  pd.read_sql_query(\"\"\"SELECT e.ID , e.LastName, e.FirstName Count(*) num_territories FROM Employee \\\n",
+    "e INNER JOIN EmployeeTerritory t on e.EmployeeID = t.ID GROUP BY e.LastName ORDER BY num_terr\n",
     "df2 = pd.read_sql_query(None, None)\n",
     "df2.head()"
    ]
